@@ -4,7 +4,16 @@ version '1.0-SNAPSHOT'
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
-if ( project.hasProperty("mainClass") ) {
+applicationDefaultJvmArgs = [
+                             "-server", "-XX:+AggressiveOpts",
+                             "-XX:NewSize=512m", "-XX:MaxNewSize=512m",
+                             "-Xms6g",
+                             "-Xmx6g"
+]
+
+
+
+if (project.hasProperty("mainClass")) {
     mainClassName = mainClass
 } else {
     mainClassName = "edu.unh.cs.ai.realtimesearch.RealTimeSearchKt"
@@ -46,7 +55,17 @@ sourceSets {
 }
 
 run {
-    if ( project.hasProperty("appArgs") ) {
+    if (project.hasProperty("appArgs")) {
         args = Eval.me(appArgs)
+    }
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "$mainClassName"
+    }
+
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
